# heroes-like

./: .gitignore  AGENTS.md  PLAN.md  README.md  project.godot  project.md
archive/document-reset-2026-04-27/: PLAN.md  project.md
art/overworld/: decorative_object_sprites.json  manifest.json  map_object_sprites.json
content/: animation_event_cues.json  army_groups.json  artifacts.json  biomes.json  buildings.json  campaigns.json  encounters.json  factions.json  heroes.json  homm3_re_obstacle_proxy_catalog.json  homm3_re_reward_object_proxy_catalog.json  map_objects.json  neutral_dwellings.json  random_map_generator_data_model.json  random_map_template_catalog.json  random_map_template_import_summary.json  resource_sites.json  scenarios.json  spells.json  terrain_grammar.json  terrain_layers.json  towns.json  units.json
docs/: animation-battle-troop-state-contract-report.md  animation-event-cue-catalog-contract-report.md  animation-overworld-object-state-contract-report.md  animation-reduced-motion-fast-mode-policy-report.md  animation-systems-foundation.md  animation-validation-smoke-harness-report.md  artifact-ai-valuation-report.md  artifact-equip-runtime-effects-report.md  artifact-sets-faction-specific-content-report.md  artifact-source-reward-rules-report.md  artifact-system-expansion-foundation.md  artifact-taxonomy-schema-implementation-report.md  concept-art-batch-001-review.md  concept-art-batch-002-review.md  concept-art-batch-003-review.md  concept-art-batch-004-review.md  concept-art-batch-005-review.md  concept-art-decision-register.md  concept-art-implementation-briefs.md  concept-art-pipeline.md  economy-capture-income-loop-expansion-report.md  economy-capture-resource-loop-live-proof-report.md  economy-capture-resource-loop-manual-gate-review.md  economy-capture-resource-loop-proof-plan.md  economy-market-faction-costs-report.md  economy-overhaul-foundation.md  economy-rare-resource-activation-report.md  economy-resource-additive-schema-validator-plan.md  economy-resource-schema-migration-plan.md  economy-wood-canonical-cleanup-report.md  factions-content-bible.md  fog-of-war-homm-style-decision.md  foundation-game-loop-prioritization.md  generated-terrain-class-replacement-workflow.md  magic-adventure-map-spell-hooks-report.md  magic-ai-valuation-casting-hooks-report.md  magic-artifact-economy-integration-report.md  magic-battle-spell-behavior-expansion-report.md  magic-spell-school-category-schema-report.md  magic-system-expansion-foundation.md  (+109 more)
ops/: acorp_attention.md  progress.json
scenes/battle/: BattleBoardView.gd  BattleShell.gd  BattleShell.tscn
scenes/boot/: Boot.gd  Boot.tscn
scenes/editor/: MapEditorShell.gd  MapEditorShell.tscn
scenes/menus/: MainMenu.gd  MainMenu.tscn  MainMenuHeroView.gd
scenes/overworld/: OverworldMapView.gd  OverworldShell.gd  OverworldShell.tscn
scenes/results/: OutcomeBannerView.gd  ScenarioOutcomeShell.gd  ScenarioOutcomeShell.tscn
scenes/town/: TownShell.gd  TownShell.tscn  TownStageView.gd
scenes/ui/: FrontierBannerGlyph.gd
scripts/: analyze_overworld_profile_log.py  build_map_persistence_windows.bat
scripts/autoload/: AppRouter.gd  CampaignProgression.gd  ContentService.gd  LiveValidationHarness.gd  SaveService.gd  SessionState.gd  SettingsService.gd
scripts/core/: AnimationCueCatalog.gd  ArtifactRules.gd  BalanceRegressionReportRules.gd  BattleAiRules.gd  BattleRules.gd  CampaignRules.gd  DifficultyRules.gd  EnemyAdventureRules.gd  EnemyTurnRules.gd  HeadlessSimulationHarnessRules.gd  HeroCommandRules.gd  HeroProgressionRules.gd  OverworldRules.gd  ProfileLog.gd  (+9 more)
src/gdextension/: CMakeLists.txt  README.md  map_persistence.gdextension  map_persistence.gdextension.in
src/gdextension/include/: map_document.hpp  map_package_service.hpp  rmg_data_model.hpp  scenario_document.hpp
src/gdextension/src/: map_document.cpp  map_package_service.cpp  register_types.cpp  rmg_data_model.cpp  scenario_document.cpp
tests/: ai_commander_role_adoption_boundary_report.gd  ai_commander_role_adoption_boundary_report.tscn  ai_commander_role_state_report.gd  ai_commander_role_state_report.tscn  ai_commander_role_turn_transcript_report.gd  ai_commander_role_turn_transcript_report.tscn  ai_economy_pressure_report.gd  ai_economy_pressure_report.tscn  ai_event_surfacing_report.gd  ai_event_surfacing_report.tscn  ai_faction_personality_evidence_report.gd  ai_faction_personality_evidence_report.tscn  ai_glassroad_defense_proof_report.gd  ai_glassroad_defense_proof_report.tscn  ai_hero_task_live_adoption_gate_report.gd  ai_hero_task_live_adoption_gate_report.tscn  ai_hero_task_state_boundary_report.gd  ai_hero_task_state_boundary_report.tscn  ai_hero_task_state_normalizer_preservation_report.gd  ai_hero_task_state_normalizer_preservation_report.tscn  ai_overworld_object_valuation_route_effects_report.gd  ai_overworld_object_valuation_route_effects_report.tscn  ai_public_event_log_boundary_report.gd  ai_public_event_log_boundary_report.tscn  ai_site_control_proof_report.gd  ai_site_control_proof_report.tscn  ai_town_governor_pressure_report.gd  ai_town_governor_pressure_report.tscn  all_interactable_object_footprint_audit.py  animation_battle_troop_state_contract_report.gd  animation_battle_troop_state_contract_report.tscn  animation_event_cue_catalog_report.gd  animation_event_cue_catalog_report.tscn  animation_overworld_object_state_contract_report.gd  animation_overworld_object_state_contract_report.tscn  animation_reduced_motion_fast_mode_policy_report.gd  animation_reduced_motion_fast_mode_policy_report.tscn  animation_validation_smoke_harness_report.gd  animation_validation_smoke_harness_report.tscn  artifact_ai_valuation_report.gd  (+281 more)
tools/: build_overworld_terrain_tiles.py  generated_terrain_atlas_tool.py  rmg_export_timing_summary.py  rmg_fast_audit.py  rmg_fast_validation.py  rmg_native_batch_export.gd  rmg_native_batch_export.tscn  rmg_production_gap_audit.py  rmg_python_validation_gate.py  rmg_quick_validation.py
(+15 files in other folders)
